--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,22 @@ body {
   box-shadow: rgba(100 100 111 / 0.2) 0px 7px 29px 0px;
 }
 
+.nav-slide-top:nth-child(1) {
+  animation: nav-slide-top 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.15s both;
+}
+.nav-slide-top:nth-child(2) {
+  animation: nav-slide-top 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.25s both;
+}
+.nav-slide-top:nth-child(3) {
+  animation: nav-slide-top 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.35s both;
+}
+.nav-slide-top:nth-child(4) {
+  animation: nav-slide-top 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.45s both;
+}
+.nav-btn-slide-top {
+  animation: nav-slide-top 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.55s both;
+}
+
 .slide-top {
   -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s
     both;
@@ -162,6 +178,21 @@ body {
     transform: translateY(50px);
   }
   100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+@keyframes nav-slide-top {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(50px);
+    transform: translateY(50px);
+  }
+  10% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
     -webkit-transform: translateY(0);
     transform: translateY(0);
   }
