--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,10 @@ body {
   box-shadow: rgba(100 100 111 / 0.2) 0px 7px 29px 0px;
 }
 
+.socials {
+  animation: display-socials 1.5s linear;
+}
+
 .nav-slide-top:nth-child(1) {
   animation: nav-slide-top 0.55s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.15s both;
 }
@@ -195,6 +199,18 @@ body {
     opacity: 1;
     -webkit-transform: translateY(0);
     transform: translateY(0);
+  }
+}
+
+@keyframes display-socials {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
