--- a/src/index.css
+++ b/src/index.css
@@ -171,12 +171,8 @@ body {
   transition: opacity 500ms;
 }
 
-.animate-on-scroll.fade-in-bottom {
-  opacity: 1;
-}
-
 .fade-in-bottom {
-  animation: fade-in-bottom 0.4s ease-in-out 0.4s both;
+  animation: fade-in-bottom 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) 0.2s both;
 }
 
 /* ----------------------------------------------
